--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 publish = false
 
 [dependencies]
+cmake_config = { version = "*", path = "cmake_config" }
 docopt = "0.8"
 serde = "1.0"
 serde_derive = "1.0"
