--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,9 @@ version = "0.0.1"
 publish = false
 
 [dependencies]
-cmake_config = { version = "*", path = "cmake_config" }
-structopt = "0.2"
-serde = "1.0"
-serde_derive = "1.0"
 cargo_metadata = "0.5"
-toml = "0.4"
-log = "0.4"
+cmake_config = { version = "*", path = "cmake_config" }
 colored = "1.6"
+fel4-config = { git = "ssh://github.com/PolySync/fel4-config.git", branch = "master" }
+log = "0.4"
+structopt = "0.2"
