--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ colored = "1.6"
 fel4-config = { git = "ssh://github.com/PolySync/fel4-config.git", branch = "master" }
 log = "0.4"
 structopt = "0.2"
+
+[dev-dependencies]
+proptest = "0.7"
+tempfile = "3"
+lazy_static = "1.0"
