Migrate arm-sel4-fel4 target to armv7-sel4-fel4

--- a/templates/Xargo.toml
+++ b/templates/Xargo.toml
@@ -1,4 +1,4 @@
 [target.x86_64-sel4-fel4.dependencies]
 alloc = {}
-[target.arm-sel4-fel4.dependencies]
+[target.armv7-sel4-fel4.dependencies]
 alloc = {}
