--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cargo-fel4"
 version = "0.0.1"
 publish = false
+authors = ["Jon Lamb <jlamb@polysync.io>", "Zachary Pierce <zpierce@polysync.io>", "Dan Pittman <dpittman@polysync.io>"]
 
 [dependencies]
 cargo_metadata = "0.5"
